fixed navigation rows alignment

--- a/html/css/partials/pagination2.css
+++ b/html/css/partials/pagination2.css
@@ -86,6 +86,7 @@
   font-size: 18px;
   line-height: 17px;
   overflow: hidden;
+  margin-top: 1px;
 }
 .pagination a.first-page:after{
   content: '⇤';
